--- a/styles/index.css
+++ b/styles/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  /* font-family: "Poppins"; */
+  font-family: "Poppins" !important;
   /* font-weight: 400; */
   font-style: normal;
 }
